<resources>
    <string name="app_name">Spaced Repetition</string>
    <string name="remindersTitle">Reminders</string>
    <string name="reminderTitle">Reminder</string>
    <string name="editReminderTitle">Edit Reminder</string>
    <string name="addReminderTitle">Add Reminder</string>
    <string name="summary">Summary:</string>
    <string name="content">Content:</string>
    <string name="logout">Logout</string>
    <string name="listItemReminderIconDescription">Reminder item</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="filler">Placeholder filler text</string>
    <string name="days">Days to Remind me:</string>
    <string name="show_notification">Show Notification</string>
    <string name="channel_name">Reminder Notifications</string>
    <string name="channel_description">Show notifications for reminders</string>
    <string name="main_hello">Hello %1$s</string>
    <string name="main_reminders_title">My Reminders</string>
    <string name="reminder_toggle_button_reveal">Reveal</string>
    <string name="reminder_toggle_button_hide">Hide</string>
    <string name="reminder_content_hidden">[Hidden]</string>
    <string name="main_review_button_title">Start Review</string>
    <string name="main_review_button_title_inactive">Nothing to review!</string>
    <string name="review_title">Review Reminders</string>
    <string name="review_reveal_button_title_hide">Hide</string>
    <string name="review_reveal_button_title_reveal">Reveal</string>
    <string name="review_reveal_button_title_loading">Loading...</string>
    <string name="nav_action_add">Add</string>
    <string name="nav_action_logout">Sign Out</string>
    <string name="nav_action_save">Save</string>
    <string name="nav_action_delete">Delete</string>

</resources>